Added jwt auth and user routes
